Fix z-index issue with card previews.

--- a/client/src/components/CardImagePreview/CardImagePreview.scss
+++ b/client/src/components/CardImagePreview/CardImagePreview.scss
@@ -1,6 +1,6 @@
 .CardImagePreview {
     position: absolute;
-    z-index: 2;
+    z-index: 3;
     pointer-events: none;
 
     &-image {
